Fix the query CTA endscreen item alignments so that the game icon doesn't go over the game image on some resolutions.

--- a/src/styl/end-screen-query.styl
+++ b/src/styl/end-screen-query.styl
@@ -2,8 +2,8 @@
 
 #end-screen {
   .download-query {
-    padding-top: $endscreen-default-size * .8;
-    padding-bottom: $endscreen-default-size * .2;
+    padding-top: $endscreen-default-size * .7;
+    padding-bottom: $endscreen-default-size * .5;
 
     .download-query-text {
       color: $end-screen-game-name-color;
@@ -37,8 +37,10 @@
 
 body {
   &.portrait #end-screen {
-    .download-container-query {
-      margin: $endscreen-default-size * 1 auto auto auto;
+    .end-screen-info {
+      .download-container-query {
+        margin-top: 0;
+      }
     }
   }
 
@@ -53,13 +55,13 @@ body {
   &.landscape #end-screen {
     .end-screen-info {
       .download-container-query {
-        margin: 0;
+        margin-top: 0;
       }
     }
 
     .download-query {
       padding-top: $endscreen-default-size * 1;
-      padding-bottom: $endscreen-default-size * .3;
+      padding-bottom: $endscreen-default-size * .5;
     }
   }
 }
